[package]
name = "ui_controls"
version = "0.2.0"
edition = "2021"
description = "A library for building interactions with UIs from code."
license = "MIT"
documentation = "https://docs.rs/ui_controls/"
repository = "https://github.com/NexRX/ui-controls/"

[lib]
name = "ui_controls"

[features]
default = ["cpu", "gpu", "opencv", "imageproc"]
opencv = ["dep:opencv"]
imageproc = ["dep:imageproc"]
cpu = ["dep:rustfft", "dep:ndarray"]
gpu = ["dep:template-matching"]

[dependencies]
derive_more = "0.99.0"
image = "0.24"
imageproc = { version = "0.25.0", optional = true }
ndarray = { version = "0.15.0", features = ["rayon"], optional = true }
ndrustfft = "0.4.5"
opencv = { version = "0.92.2", features = [
    "ximgproc",
    "clang-runtime",
], optional = true }
rayon = "1.10.0"
rustfft = { version = "6.2.0", optional = true }
transpose = "0.2.3"
xcap = "0.0.10"
template-matching = { version = "0.2.0", features = ["image"], optional = true }

[profile.dev]
opt-level = 2

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
range_check = "0.2.0"

[[bench]]
name = "template_matching"
harness = false
required-features = ["cpu", "gpu", "opencv", "imageproc"]
