[package]
name = "ui_controls"
version = "0.2.0"
edition = "2021"
description = "A library for building interactions with UIs from code."
license = "MIT"
documentation = "https://docs.rs/ui_controls/"
repository = "https://github.com/NexRX/ui-controls/"

[lib]
name = "ui_controls"

[features]
default = ["cpu", "gpu"]
opencv = ["dep:opencv"]
cpu = ["dep:rustfft"]
gpu = ["dep:wgpu", "dep:pollster", "dep:winit", "dep:bytemuck"]

[dependencies]
derive_more = "0.99.0"
image = "0.25"
ndrustfft = "0.4.5"
opencv = { version = "0.92.2", features = [
    "ximgproc",
    "clang-runtime"
], optional = true }
rayon = "1.10.0"
rustfft = { version = "6.2.0", optional = true }
transpose = "0.2.3"
xcap = "0.0.11"
# ocl = "0.19.7"
wgpu = { version = "22.1.0", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", optional = true }
bytemuck = { version = "1.16.3", features = ["derive"], optional  = true }
futures-intrusive = "0.5.0"
once_cell = "1.19.0"

[profile.dev]
opt-level = 2

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
range_check = "0.2.0"
tokio = { version = "1.39", features = ["rt", "macros"] }

[[bench]]
name = "template_matching"
harness = false
required-features = ["cpu", "gpu"]
